test/Harper/Tests/Good/issue5_ass2.har
fun n = {
  var y = n;
  var n = n;
  n *= 2;
  return n;
};

main = fun 42;