test/Harper/Tests/Bad/issue5_undeclared.har
fun n = {
    x = n;
    y += 1;
    return x;
};

main = fun 42;